--- a/first/index.html
+++ b/first/index.html
@@ -10,8 +10,8 @@
 <body>
     <input type="number" name="" id="input"><br>
     <button id="submit">submit</button><br>
-    <button class="total" id="total">total</button>
     <p id="DOM"></p>
+    <p id="DOM2"></p>
 
 
 
