--- a/first/index.html
+++ b/first/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <input type="number" name="" id="input"><br>
-    <button id="submit">WAZAAAAAAAAAAAAAAAAAAA</button><br>
+    <button id="submit">Submit Nigga</button><br>
     <p id="DOM"></p>
     <p id="DOM2"></p>
 
