--- a/Home/pages/home.html
+++ b/Home/pages/home.html
@@ -125,5 +125,6 @@
     </div>
     <script src="/Home/assets/js/code.js"></script>
     <script src="/Home/assets/js/bootstrap.bundle.min.js"></script>
+    LMAOMALMAOMALAMOAMLAMOAMLAMOAMLAMOAMLAMOAMALMAOMAOPMALAMOAML
 </body>
 </html>
