modified:   Home/pages/prices.html

--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -45,7 +45,7 @@
     <main class="cards-container">
       <div class="full-body-card">
         <span>Full Body Massage</span>
-        <select name="" id="">
+        <select name="Imagine" id="full-body-selector">
           <option value="classic-massage">Classic Massage</option>
           <option value="swedish-massage">Swedish Massage</option>
           <option value="Relax-massage">Relax Massage</option>
