modified:   Home/pages/prices.html

--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -22,7 +22,7 @@
     <main class="cards-container">
       <div class="full-body-card">
         <label for="full-body-selector">Full Body Massage</label>
-        <select name="Imagine" id="full-body-selector>
+        <select name="full-body-selector" id="full-body-selector">
           <option value="classic-massage">Classic Massage</option>
           <option value="swedish-massage">Swedish Massage</option>
           <option value="Relax-massage">Relax Massage</option>
