--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -29,7 +29,21 @@
           <option value="Deep-tissue-massage">Deep Tissue Massage</option>
           <option value="Lymphatic-drainage-massage">Lymphatic Drainage Massage</option>
         </select>
+        <div class="length-selector-body-container">
+          <label for="length-selector-full-body">Length</label>
+          <select name="length-selector" id="length-selector-full-body">
+            <option value="60">60 minutes</option>
+            <option value="90">90 minutes</option>
+            <option value="120">120 minutes</option>
+          </select>
+        </div>
       </div>
     </main>
   </body>
 </html>
+
+<!-- STILL NOT RESPONSIVE so don't shrink the screen, cus stuff will get ugly, will work on dat later-->
+<!-- WE NEED JAVASCRIPT FOR SIDEBAR (ITS ON YOU, well both of us, but mostly you), will give you details of the plan later on discord-->
+<!-- PICO CSS IS THE GOAT, bootstrap is for losers-->
+<!-- ONLY USED PICO CSS FOR NAVIGATION BAR, else is vanilla css-->
+
