--- a/Home/pages/home.html
+++ b/Home/pages/home.html
@@ -21,7 +21,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/Home/">Booking</a>
+                <a class="nav-link" href="/Home/pages/Booking.html">Booking</a>
                 <a class="nav-link" href="/Home/pages/prices.html">Prices</a>
                 <a class="nav-link active" aria-current="page" href="/Home/pages/home.html">Home</a>
             </div>
@@ -60,10 +60,14 @@
         </div>
       </div>
 
-      <div class="massage-card"  id="hidden-card">
+
+    </div>
+
+    <div class="grid2">
+      <div class="massage-card">
         <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
-          <p>Vacuum <br> massage</p>
+          <p>Lymphatic drainage <br> massage</p>
         </div>
       </div>
 
@@ -74,6 +78,10 @@
         </div>
       </div>
     </div>
+
+
+
+
 
     <h1 class="title-grid">Other</h1>
     <div class="grid">
@@ -97,24 +105,26 @@
           <p>Myolifting facial<br> massage</p>
         </div>
       </div>
-    </div>
 
-    <div class="grid2">
+      <div class="massage-card" id="hidden-card" draggable="false" (dragstart)="false;" class="unselectable">
+        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <div class="text-grid">
+          <p>gugu gugaga <br> massage</p>
+        </div>
+      </div>
+
       <div class="massage-card">
         <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Reflexology <br> massage</p>
         </div>
       </div>
-
-      <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
-        <div class="text-grid">
-          <p>Lymphatic drainage <br> massage</p>
-        </div>
-      </div>
     </div>
     
+
+
+
+
     <div class="end-card">
       <div class="text-end-card">
         <h1>Contacts</h1>
