--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -20,13 +20,17 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/Home/">Booking</a>
+                <a class="nav-link" href="/Home/pages/Booking.html">Booking</a>
                 <a class="nav-link active" href="/Home/pages/prices.html">Prices</a>
                 <a class="nav-link" aria-current="page" href="/Home/pages/home.html">Home</a>
             </div>
           </div>
         </div>
     </nav>
+
+
+
+
 
 </body>
 </html>
