--- a/Home/pages/home.html
+++ b/Home/pages/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/Home/assets/css/styles.css">
+    <link rel="stylesheet" href="/Home/assets/css/home/styles.css">
     <link rel="stylesheet" href="/Home/assets/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -107,7 +107,6 @@
       </div>
 
       <div class="massage-card" id="hidden-card" draggable="false" (dragstart)="false;" class="unselectable">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>gugu gugaga <br> massage</p>
         </div>
