--- a/first/index.html
+++ b/first/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <input type="number" name="" id="input"><br>
+    <input type="text" name="" id="input1" placeholder="x1">
+    <input type="text" name="" id="input2" placeholder="x2"><br>
+    <p></p>
+    <p></p>
+    <input type="text" name="" id="input3" placeholder="y1">
+    <input type="text" name="" id="input4" placeholder="y2"><br>
+    <p></p>
     <button id="submit">Submit Nigga</button><br>
     <p id="DOM"></p>
-    <p id="DOM2"></p>
 
 
 
