git commit test
this is me just learning git bash ok?

--- a/first/index.html
+++ b/first/index.html
@@ -8,12 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <input type="text" name="" id="input1" placeholder="x1">
-    <input type="text" name="" id="input2" placeholder="x2"><br>
-    <p></p>
-    <p></p>
-    <input type="text" name="" id="input3" placeholder="y1">
-    <input type="text" name="" id="input4" placeholder="y2"><br>
+    <input type="text" name="" id="input1" placeholder=""><br>
     <p></p>
     <button id="submit">Submit Nigga</button><br>
     <p id="DOM"></p>
