--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -62,7 +62,7 @@
 
     <main class="buttons-container">
 
-      <div class="massage-imgs">
+      <div class="massage-imgs" id="buttons-js">
         <div>
           <button>Full body Massages</button>
         </div>
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <div class="massage-imgs">
+      <div class="massage-imgs" id="buttons-js1">
         <div>
           <button>Back Massages</button>
         </div>
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <div class="massage-imgs">
+      <div class="massage-imgs" id="buttons-js2">
         <div>
           <button>Other Massages</button>
         </div>
@@ -93,6 +93,36 @@
 
 
 
+
+    <main class="cards-container">
+      <div class="full-body-card">
+        <div class="massage-type-container">
+          <label for="full-body-selector">Full Body Massage</label>
+        <select name="full-body-selector" id="full-body-selector">
+          <option value="classic-massage">Classic Massage</option>
+          <option value="swedish-massage">Swedish Massage</option>
+          <option value="Relax-massage">Relax Massage</option>
+          <option value="Deep-tissue-massage">Deep Tissue Massage</option>
+          <option value="Lymphatic-drainage-massage">Lymphatic Drainage Massage</option>
+        </select>
+        </div>
+
+        <div class="length-selector-body-container">
+          <label for="length-selector-full-body">Length</label>
+          <select name="length-selector" id="length-selector-full-body">
+            <option value="60">60 minutes</option>
+            <option value="90">90 minutes</option>
+            <option value="120">120 minutes</option>
+          </select>
+        </div>
+      </div>
+    </main>
+
+    
+
+    
+
+    <script src="../assets/css/prices/script.js"></script>
 </html>
 
 
