--- a/Home/pages/home.html
+++ b/Home/pages/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/Home/assets/css/home/styles.css">
-    <link rel="stylesheet" href="/Home/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/home/styles.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <nav style="position: fixed; width: 100%; opacity: 1; top: 0px;" class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img style="width: 40px; margin-bottom: 3px;" src="/Home/assets/images/PngItem_1721072.png" alt="">
+            <img style="width: 40px; margin-bottom: 3px;" src="../assets/images/PngItem_1721072.png" alt="">
             Alevtina spa
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,9 +21,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/Home/pages/Booking.html">Booking</a>
-                <a class="nav-link" href="/Home/pages/prices.html">Prices</a>
-                <a class="nav-link active" aria-current="page" href="/Home/pages/home.html">Home</a>
+                <a class="nav-link" href="../pages/Booking.html">Booking</a>
+                <a class="nav-link" href="../pages/prices.html">Prices</a>
+                <a class="nav-link active" aria-current="page" href="../pages/home.html">Home</a>
             </div>
           </div>
         </div>
@@ -40,21 +40,21 @@
     <h1 class="title-grid">Full body/Back Massages</h1>
     <div class="grid">
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Classic <br> massage</p>
         </div>
       </div>
 
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Swedish <br> massage</p>
         </div>
       </div>
 
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Relax <br> Massage</p>
         </div>
@@ -65,14 +65,14 @@
 
     <div class="grid2">
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Lymphatic drainage <br> massage</p>
         </div>
       </div>
 
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Vacuum <br> massage</p>
         </div>
@@ -86,21 +86,21 @@
     <h1 class="title-grid">Other</h1>
     <div class="grid">
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Visceral<br> massage</p>
         </div>
       </div>
 
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Anti - cellulite<br> massage</p>
         </div>
       </div>
 
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Myolifting facial<br> massage</p>
         </div>
@@ -113,7 +113,7 @@
       </div>
 
       <div class="massage-card">
-        <img class="thumbnail" src="/Home/assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
         <div class="text-grid">
           <p>Reflexology <br> massage</p>
         </div>
@@ -134,8 +134,8 @@
     </div>
 
 
-    <script src="/Home/assets/js/code.js"></script>
-    <script src="/Home/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/code.js"></script>
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
   
 </body>
 </html>
