--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -115,6 +115,9 @@
             <option value="120">120 minutes</option>
           </select>
         </div>
+
+
+      <input type="text" name="" id="">
       </div>
     </main>
 
