contact list put it in the cards

--- a/Home/pages/home.html
+++ b/Home/pages/home.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../assets/css/home/styles.css">
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/general.css">
+    <link rel="stylesheet" href="../assets/css/home/styles.css">
 
     <title>3amo</title>
 </head>
 <body>
-    <nav style="position: fixed; width: 100%; opacity: 1; top: 0px;" class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav style="position: fixed; width: 100%; opacity: 1; top: 0px;" class="navbar-expand-sm navbar-dark navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img style="width: 40px; margin-bottom: 3px;" src="../assets/images/PngItem_1721072.png" alt="">
