--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../assets/css/prices/navbar.css">
     <link rel="stylesheet" href="../assets/css/prices/buttons.css">
     <link rel="stylesheet" href="../assets/css/prices/cards.css">
-    <link rel="stylesheet" href="../assets/css/prices/sidebar.css">
     <link rel="stylesheet" href="../assets/css/prices/prices_styles.css"/>
      
   </head>
@@ -59,30 +58,30 @@
 
     <main class="buttons-container">
 
-      <div class="massage-imgs" id="buttons-js">
-        <div>
+      <div class="massage-imgs" id="first">
+        <div id="buttons-js">
           <button>Full body Massages</button>
         </div>
         <div class="button-div">
-          <img src="../assets/images/background.jpg" alt="">
+          <img id="buttons-js" src="../assets/images/background.jpg" alt="">
         </div>
       </div>
 
-      <div class="massage-imgs" id="buttons-js1">
-        <div>
+      <div class="massage-imgs" id="second">
+        <div id="buttons-js1">
           <button>Back Massages</button>
         </div>
         <div class="button-div">
-          <img src="../assets/images/meditation2_M-min.jpg" alt="">
+          <img id="buttons-js1" src="../assets/images/meditation2_M-min.jpg" alt="">
         </div>
       </div>
 
-      <div class="massage-imgs" id="buttons-js2">
-        <div>
+      <div class="massage-imgs" id="third">
+        <div id="buttons-js2">
           <button>Other Massages</button>
         </div>
         <div class="button-div">
-          <img src="../assets/images/meditation2_M-min.jpg" alt="">
+          <img id="buttons-js2" src="../assets/images/meditation2_M-min.jpg" alt="">
         </div>
       </div>
     </main>
