--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -28,36 +28,10 @@
         <li id="contact"><a href="#" role="button">Contact</a></li>
       </ul>
     </nav>
-<!--
-  <main class="cards-container">
-      <div class="full-body-card">
-        <div class="massage-type-container">
-          <label for="full-body-selector">Full Body Massage</label>
-        <select name="full-body-selector" id="full-body-selector">
-          <option value="classic-massage">Classic Massage</option>
-          <option value="swedish-massage">Swedish Massage</option>
-          <option value="Relax-massage">Relax Massage</option>
-          <option value="Deep-tissue-massage">Deep Tissue Massage</option>
-          <option value="Lymphatic-drainage-massage">Lymphatic Drainage Massage</option>
-        </select>
-        </div>
-    </main>
-
-    <div class="length-selector-body-container">
-          <label for="length-selector-full-body">Length</label>
-          <select name="length-selector" id="length-selector-full-body">
-            <option value="60">60 minutes</option>
-            <option value="90">90 minutes</option>
-            <option value="120">120 minutes</option>
-          </select>
-        </div>
-      </div>
--->
 
         
 
     <main class="buttons-container">
-
       <div class="massage-imgs" id="first">
         <div id="buttons-js">
           <button>Full body Massages</button>
@@ -85,6 +59,7 @@
         </div>
       </div>
     </main>
+
     <i><h1 id="pleasure">you pleased is all we need..</h1></i>
 
 
@@ -93,7 +68,8 @@
     <div class="cards-container">
       <div class="full-body-card">
         <div class="massage-type-container">
-          <label for="full-body-selector">Full Body Massage</label>
+
+        <label for="full-body-selector">Full Body Massage</label>
         <select name="full-body-selector" id="full-body-selector">
           <option value="classic-massage">Classic Massage</option>
           <option value="swedish-massage">Swedish Massage</option>
@@ -101,7 +77,32 @@
           <option value="Deep-tissue-massage">Deep Tissue Massage</option>
           <option value="Lymphatic-drainage-massage">Lymphatic Drainage Massage</option>
         </select>
+
+
+
+        <label for="back-selector">Back Massage</label>
+        <select name="back-selector" id="back-selector">
+          <option value="classic-massage">Classic Massage</option>
+          <option value="swedish-massage">Swedish Massage</option>
+          <option value="relax-massage">Relax Massage</option>
+          <option value="deep-tissue-massage">Deep Tissue Massage</option>
+          <option value="lymphatic-drainage-massage">Lymphatic Drainage Massage</option>
+          <option value="vacuum-massage">Vacuum Massage</option>
+          <option value="hot-stone-massage">Hot Stone Massage</option>
+        </select>
+
+
+
+        <label for="other-selector">Other Massage</label>
+        <select name="other-selector" id="other-selector">
+          <option value="classic-massage">Stomach: Visceral massage</option> <!--20 min-->
+          <option value="swedish-massage">Leg: Anti - cellulite massage</option> <!--45 min-->
+          <option value="Relax-massage">facial: Myolifting massage</option> <!--15 min-->
+          <option value="Deep-tissue-massage">Foot: Reflexology massage</option> <!--30 min-->
+        </select>
+
         </div>
+
 
         <div class="length-selector-body-container">   
           <label for="length-selector-full-body">Length</label>
@@ -110,7 +111,25 @@
             <option value="90">90 minutes</option>
             <option value="120">120 minutes</option>
           </select>
+
+
+          <label for="length-selector-full-body">Length</label>
+          <select name="length-selector" id="length-selector-full-body">
+            <option value="30">30 minutes</option>
+          </select>
+
+
+          <label for="length-selector-full-body">Length</label>
+          <select name="length-selector" id="length-selector-full-body">
+            <option value="">60 minutes</option>
+            <option value="">90 minutes</option>
+            <option value="">120 minutes</option>
+          </select>
         </div>
+
+
+
+        
       </div>
 
         <div class="contact-div">
