--- a/first/index.html
+++ b/first/index.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <input type="text" name="" id="input1" placeholder=""><br>
-    <p></p>
-    <button id="submit">Submit Nigga</button><br>
-    <p id="DOM"></p>
-
+    <img src="../Home/assets/images/meditation2_M-min.jpg">
 
 
     <script src="./script.js"></script>
