--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -37,7 +37,7 @@
           <button>Full body Massages</button>
         </div>
         <div class="button-div">
-          <img id="buttons-js" src="../assets/images/background.jpg" alt="">
+          <img id="buttons-js"  src="../assets/images/background.jpg" alt="">
         </div>
       </div>
 
@@ -46,7 +46,7 @@
           <button>Back Massages</button>
         </div>
         <div class="button-div">
-          <img id="buttons-js1" src="../assets/images/meditation2_M-min.jpg" alt="">
+          <img id="buttons-js1" class="undrag" src="../assets/images/meditation2_M-min.jpg" alt="">
         </div>
       </div>
 
@@ -55,7 +55,7 @@
           <button>Other Massages</button>
         </div>
         <div class="button-div">
-          <img id="buttons-js2" src="../assets/images/meditation2_M-min.jpg" alt="">
+          <img id="buttons-js2" class="undrag" src="../assets/images/meditation2_M-min.jpg" alt="">
         </div>
       </div>
     </main>
@@ -69,8 +69,8 @@
       <div class="full-body-card">
         <div class="massage-type-container">
 
-        <label for="full-body-selector">Full Body Massage</label>
-        <select name="full-body-selector" id="full-body-selector">
+        <label for="full-body-selector" id="full">Full Body Massage</label>
+        <select name="full-body-selector" id="full-body-selector" id="full">
           <option value="classic-massage">Classic Massage</option>
           <option value="swedish-massage">Swedish Massage</option>
           <option value="Relax-massage">Relax Massage</option>
@@ -80,8 +80,8 @@
 
 
 
-        <label for="back-selector">Back Massage</label>
-        <select name="back-selector" id="back-selector">
+        <label for="back-selector" id="back">Back Massage</label>
+        <select name="back-selector" id="back-selector" id="back">
           <option value="classic-massage">Classic Massage</option>
           <option value="swedish-massage">Swedish Massage</option>
           <option value="relax-massage">Relax Massage</option>
@@ -93,8 +93,8 @@
 
 
 
-        <label for="other-selector">Other Massage</label>
-        <select name="other-selector" id="other-selector">
+        <label for="other-selector" id="other">Other Massage</label>
+        <select name="other-selector" id="other-selector" id="other">
           <option value="classic-massage">Stomach: Visceral massage</option> <!--20 min-->
           <option value="swedish-massage">Leg: Anti - cellulite massage</option> <!--45 min-->
           <option value="Relax-massage">facial: Myolifting massage</option> <!--15 min-->
@@ -106,21 +106,19 @@
 
         <div class="length-selector-body-container">   
           <label for="length-selector-full-body">Length</label>
-          <select name="length-selector" id="length-selector-full-body">
+          <select id="length-selector-full-body">
             <option value="60">60 minutes</option>
             <option value="90">90 minutes</option>
             <option value="120">120 minutes</option>
           </select>
 
 
-          <label for="length-selector-full-body">Length</label>
-          <select name="length-selector" id="length-selector-full-body">
+          <select id="length-selector-back">
             <option value="30">30 minutes</option>
           </select>
 
 
-          <label for="length-selector-full-body">Length</label>
-          <select name="length-selector" id="length-selector-full-body">
+          <select id="length-selector-other">
             <option value="">60 minutes</option>
             <option value="">90 minutes</option>
             <option value="">120 minutes</option>
