--- a/Home/pages/prices.html
+++ b/Home/pages/prices.html
@@ -65,7 +65,7 @@
 
 
 
-    <div class="cards-container">
+    <div class="cards-container" id="cards">
       <div class="full-body-card">
         <div class="massage-type-container">
 
