--- a/Home/pages/home.html
+++ b/Home/pages/home.html
@@ -42,14 +42,14 @@
     <h1 class="title-grid">Full body/Back Massages</h1>
     <div class="grid">
       <div class="massage-card">
-        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/classic.jpg" alt="">
         <div class="text-grid">
           <p>Classic <br> massage</p>
         </div>
       </div>
 
       <div class="massage-card">
-        <img class="thumbnail" src="../assets/images/meditation2_M-min.jpg" alt="">
+        <img class="thumbnail" src="../assets/images/Swedish-massage-with-oil.jpg" alt="">
         <div class="text-grid">
           <p>Swedish <br> massage</p>
         </div>
