--- a/handyman site/index.html
+++ b/handyman site/index.html
@@ -184,7 +184,7 @@
             color: #202124;
             font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
             margin: 0;
-            text-size-adjust: 100%
+            text-size-adjust: 100%;
             padding-top: 100px;
         }
 
@@ -205,6 +205,10 @@
             -webkit-tap-highlight-color: transparent
         }
 
+        .pic{
+            width: 100%;
+            height: 100px;
+        }
         #apps-debug-tracers {
             display: none
         }
@@ -3471,117 +3475,32 @@
                                 <h2 class="Igsabe">Gallery
                                 </h2>
                             </div>
-                            <div class="goIW2">
-                                <div class="UCecQ">
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipNvhvyZaAjzwx6zb4lZnZnccIFqiqnc6Tr_AK8W"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipNvhvyZaAjzwx6zb4lZnZnccIFqiqnc6Tr_AK8W=w960-h960-n-o-v1">
-                                                <img class="d11Ssd" src="/handyman site/assets/IMG_0727.png"
-                                                    data-iml="7828.900000095367" data-atf="false">
-                                            </picture>
-                                        </a>
+                            <div class="contain">
+                                <div class="row">
+                                    <div class="col-2">
+                                        <img class="pic" src="/handyman site/assets/pictures/Kitchen_Faucets_pull-down_faucets.jpg" alt="">
                                     </div>
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipO0SrvnRLA2hR0BG7ln_qOWTBwW9q1Qi8W6pgkM"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipO0SrvnRLA2hR0BG7ln_qOWTBwW9q1Qi8W6pgkM=w960-h960-n-o-v1">
-                                                <img class="d11Ssd"
-                                                    src="https://lh3.googleusercontent.com/p/AF1QipO0SrvnRLA2hR0BG7ln_qOWTBwW9q1Qi8W6pgkM=w768-h768-n-o-v1"
-                                                    data-iml="7728.599999904633" data-atf="false">
-                                            </picture>
-                                        </a>
+                                    <div class="col-2">
+                                        <img class="pic" src="/handyman site/assets/IMG_0727.png" alt="">
                                     </div>
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipPqhwOPhvSvT1aYuLMSA91YDrch0auKADuLT3ot"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)" srcset="ht1">
-                                                <img class="d11Ssd"
-                                                    src="https://lh3.googleusercontent.com/p/AF1QipPqhwOPhvSvT1aYuLMSA91YDrch0auKADuLT3ot=w768-h768-n-o-v1"
-                                                    data-iml="7722.400000095367" data-atf="false">
-                                            </picture>
-                                        </a>
+                                    <div class="col-2">
+                                        <img class="pic" src="/handyman site/assets/IMG_0727.png" alt="">
                                     </div>
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipOb28qeWY1lrq0k7TI6Cu7WgFqE6J_apew1mHi_"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipOb28qeWY1lrq0k7TI6Cu7WgFqE6J_apew1mHi_=w960-h960-n-o-v1">
-                                                <img class="d11Ssd"
-                                                    src="https://lh3.googleusercontent.com/p/AF1QipOb28qeWY1lrq0k7TI6Cu7WgFqE6J_apew1mHi_=w768-h768-n-o-v1"
-                                                    data-iml="7726.400000095367" data-atf="false">
-                                            </picture>
-                                        </a>
+                                </div>
+                                <div class="row">
+                                    <div class="col-1">
+                                        <img class="pic" src="/handyman site/assets/IMG_0727.png" alt="">
                                     </div>
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipM83wxrThqcmIQEOilfEkOYTh0EpNG3ekv4Bqac"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipM83wxrThqcmIQEOilfEkOYTh0EpNG3ekv4Bqac=w960-h960-n-o-v1">
-                                                <img class="d11Ssd"
-                                                    src="https://lh3.googleusercontent.com/p/AF1QipM83wxrThqcmIQEOilfEkOYTh0EpNG3ekv4Bqac=w768-h768-n-o-v1"
-                                                    data-iml="7720.5" data-atf="false">
-                                            </picture>
-                                        </a>
+                                    <div class="col-1">
+                                        <img class="pic" src="/handyman site/assets/IMG_0727.png" alt="">
                                     </div>
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipMMDpFUaEN3mj2LUfXzE68whZc5FA6HIMhPv_i6"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipMMDpFUaEN3mj2LUfXzE68whZc5FA6HIMhPv_i6=w960-h960-n-o-v1">
-                                                <img class="d11Ssd"
-                                                    src="https://lh3.googleusercontent.com/p/AF1QipMMDpFUaEN3mj2LUfXzE68whZc5FA6HIMhPv_i6=w768-h768-n-o-v1"
-                                                    data-iml="7722.900000095367" data-atf="false">
-                                            </picture>
-                                        </a>
-                                    </div>
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipOLSS-wOe9pnFp6RGRfyhBQ0VK1sDT1gGVvehXC"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipOLSS-wOe9pnFp6RGRfyhBQ0VK1sDT1gGVvehXC=w960-h960-n-o-v1">
-                                                <img class="d11Ssd"
-                                                    src="https://lh3.googleusercontent.com/p/AF1QipOLSS-wOe9pnFp6RGRfyhBQ0VK1sDT1gGVvehXC=w768-h768-n-o-v1"
-                                                    data-iml="7731" data-atf="false">
-                                            </picture>
-                                        </a>
-                                    </div>
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipNTJMvUABaN2JiDytgbnwialvLrYoS0E1QheVEq"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipNTJMvUABaN2JiDytgbnwialvLrYoS0E1QheVEq=w960-h960-n-o-v1">
-                                                <img class="d11Ssd"
-                                                    src="https://lh3.googleusercontent.com/p/AF1QipNTJMvUABaN2JiDytgbnwialvLrYoS0E1QheVEq=w768-h768-n-o-v1"
-                                                    data-iml="7729.300000190735" data-atf="false">
-                                            </picture>
-                                        </a>
-                                    </div>
-                                    <div class="PWqJSb ZdKHsd">
-                                        <a href="//www.google.com/maps/uv?pb=!1s0x882b3fcf89a8806f:0x8a2426e048695008!3m1!7e131!4s!5sPeel+Friendly+Handyman+certified+plumber&amp;hl=en&amp;imagekey=!1e10!2sAF1QipNbC0KWEH-3xEE-FgIFsLi4ahd0drOFgQcqO5o9"
-                                            class="oYxtQd" target="_blank">
-                                            <picture aria-label="Business photo">
-                                                <source media="(min-width: 768px)"
-                                                    srcset="https://lh3.googleusercontent.com/p/AF1QipNbC0KWEH-3xEE-FgIFsLi4ahd0drOFgQcqO5o9=w960-h960-n-o-v1">
-                                                <img class="d11Ssd"
-                                                    src="https://lh3.googleusercontent.com/p/AF1QipNbC0KWEH-3xEE-FgIFsLi4ahd0drOFgQcqO5o9=w768-h768-n-o-v1"
-                                                    data-iml="7731.800000190735" data-atf="false">
-                                            </picture>
-                                        </a>
+                                    <div class="col-1">
+                                        <img class="pic" src="/handyman site/assets/IMG_0727.png" alt="">
                                     </div>
                                 </div>
                             </div>
-                        </div>
+
+                            
                         <div id="details" data-panel="business-details-panel" class="IJMoHc b0t70b"
                             jslog="59796; track:impression">
                             <hr class="WUdCTb">
