--- a/handyman/index.html
+++ b/handyman/index.html
@@ -11,7 +11,6 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
-          <img class="logo" src="/handyman/assets/images/317948305_3451903731710481_7486004379737873325_n.png" alt="Site logo">
           <a class="navbar-brand" href="/handyman/index.html">Easy Handyman</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,16 +34,31 @@
 
 
       <main class="container">
+        <img class="big-pic" src="/handyman/assets/images/HSN-Code-and-GST-Rate-for-Tools-and-Kitchenware.jpg" alt="">
+      </main>
+
+      <main class="container-md border">
         <p class="title">Gallary</p>
         <div class="row">
-          <div class="col-1">
-            <img src="" alt="">
+          <div class="col">
+            <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;" src="/handyman/assets/images/gallary1.jpg" alt="">
           </div>
-          <div class="col-1">
+          <div class="col">
+            <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;" src="/handyman/assets/images/gallary2.jpg" alt="">
+          </div>
+          <div class="col">
+            <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;" src="/handyman/assets/images/gallary3.jpg" alt="">
+          </div>
+        </div>
+        <div class="row second-row">
+          <div class="col">
+            <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;" src="/handyman/assets/images/gallary4.jpg" alt="">
+          </div>
+          <div class="col">
 
           </div>
-          <div class="col-1">
-
+          <div class="col">
+            
           </div>
         </div>
       </main>
