--- a/handyman/index.html
+++ b/handyman/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,63 +9,116 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/handyman/assets/css/styles.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/handyman/index.html">Easy Handyman</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link header-btn" href="#">GET QUOTE</a>
-              </li>
-            </ul>
-          </div>
+            <a class="navbar-brand" href="#">Easy Handyman</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link header-btn" href="#">GET QUOTE</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
 
 
-      <main class="container headline-div">
+    <main class="container headline-div">
         <h1 class="headline">Easy Handyman</h1>
         <p class="headline-description">Professional Handyman</p>
-        <button class="nav-link headline-btn" href="#">GET QUOTE</button>
-      </main>
+        <a class="nav-link headline-btn" href="#">GET QUOTE</a>
+    </main>
 
 
-      <main class="container">
+    <main class="container">
         <img class="big-pic" src="/handyman/assets/images/HSN-Code-and-GST-Rate-for-Tools-and-Kitchenware.jpg" alt="">
-      </main>
+    </main>
 
-      <main class="container-md border">
+    <main class="container testimonials">
+        <p class="title">Testimonials</p>
+        <div class="row">
+            <div class="col mx-2">
+                <div class="row">
+                    <p class="text-muted p-0">5 star, 2 minutes ago</p>
+                </div>
+                <div class="row">
+                    omg this man is very talented and very nice,
+                    love him very much
+                    <p class="mt-3 munib-primary">-Munib S</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="row">
+                    <p class="text-muted p-0">5 star, 2 minutes ago</p>
+                </div>
+                <div class="row">
+                    he is my husband
+                    <p class="mt-3 munib-primary">-Mama S</p>
+                </div>
+            </div>
+            <div class="col mx-2">
+                <div class="row">
+                    <p class="text-muted p-0">5 star, 2 minutes ago</p>
+                </div>
+                <div class="row">
+                    omg very well priced service, i thought i would have to pay
+                    $300 like i always do but this man did it infront of me easily
+                    <p class="mt-3 munib-primary">-3bdallah S</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
+    <main class="container-md">
         <p class="title">Gallary</p>
         <div class="row">
-          <div class="col">
-            <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;" src="/handyman/assets/images/gallary1.jpg" alt="">
-          </div>
-          <div class="col">
-            <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;" src="/handyman/assets/images/gallary2.jpg" alt="">
-          </div>
-          <div class="col">
-            <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;" src="/handyman/assets/images/gallary3.jpg" alt="">
-          </div>
+            <div class="col">
+                <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;"
+                    src="/handyman/assets/images/gallary1.jpg" alt="">
+            </div>
+            <div class="col">
+                <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;"
+                    src="/handyman/assets/images/gallary2.jpg" alt="">
+            </div>
+            <div class="col">
+                <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;"
+                    src="/handyman/assets/images/gallary3.jpg" alt="">
+            </div>
         </div>
         <div class="row second-row">
-          <div class="col">
-            <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;" src="/handyman/assets/images/gallary4.jpg" alt="">
-          </div>
-          <div class="col">
+            <div class="col">
+                <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;"
+                    src="/handyman/assets/images/gallary4.jpg" alt="">
+            </div>
+            <div class="col">
+                <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;"
+                    src="/handyman/assets/images/gallary4.jpg" alt="">
 
-          </div>
-          <div class="col">
-            
-          </div>
+            </div>
+            <div class="col">
+                <img style="object-fit:cover; width: 100%; object-position: left; height: 300px; border-radius: 5px;"
+                    src="/handyman/assets/images/gallary4.jpg" alt="">
+            </div>
         </div>
-      </main>
+    </main>
+
+
+    jkhsgehfiluaghsef
+    ierhfl
+
+
 
 
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="/handyman/assets/js/script.js"></script>
 </body>
+
 </html>
