--- a/handyman/index.html
+++ b/handyman/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/handyman/assets/css/styles.css">
+    <link rel="stylesheet" href="/handyman/assets/css/styles.min.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link header-btn" href="#">GET QUOTE</a>
+                        <a class="nav-link header-btn" href="#">GET QUOTE</a> 
                     </li>
                 </ul>
             </div>
@@ -110,7 +110,7 @@
         </div>
     </main>
 
-
+    <p class="bg-color">isuehfs</p>
 
 
 
