--- a/main/index.html
+++ b/main/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/main/styles.css">
-</head>
-<body>
-
-
-    <script src="../main/script.js"></script>
-</body>
+<html>
+    <head>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet" href="./styles.css">
+    </head>
+    <body>
+        <input type="text" name="" id="input">
+        <button id="submit">submit</button>
+        <script type="module" src="./script.js"></script>
+    </body>
 </html>
