--- a/funi/index.html
+++ b/funi/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blob</title>
+    <title>funi</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="blob">
-
+    <div class="wrapper">
+        <span>&#128514;</span>
+        <p id="joke">  
+            ERROR
+        </p>
+        <button id="btn">New Random joke</button>
     </div>
-    <div class="background">
-
-    </div>
-
 
 
     <script src="./script.js"></script>
