--- a/hearts/index.html
+++ b/hearts/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mouse trail</title>
+    <title>Love</title>
     <link rel="stylesheet" href="./styles.css">
     <style></style>
 </head>
@@ -12,6 +12,7 @@
     <main class="black">
         
     </main>
+    <audio src="./love.mp3" controls autoplay loop></audio>  
 
     <script src="./script.js"></script>
 </body>
