--- a/hearts/index.html
+++ b/hearts/index.html
@@ -12,7 +12,7 @@
     <main class="black">
         
     </main>
-    <audio src="./love.mp3" controls autoplay loop></audio>  
+    <audio src="./love.mp3" controls="" autoplay="" loop=""></audio>  
 
     <script src="./script.js"></script>
 </body>
